# gs-plugin-vso

./: .clang-format  Makefile  README.md  aarch64-linux-gnu.txt  gs-plugin-vso.c  gs-plugin-vso.h  meson.build
.github/workflows/: build.yml  release.yml
debian/: changelog  control  copyright  libgs-plugin-vso.install
